; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zio_inject.c_zio_inject_list_next.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zio_inject.c_zio_inject_list_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32 }

@spa_namespace_lock = common dso_local global i32 0, align 4
@inject_lock = common dso_local global i32 0, align 4
@RW_READER = common dso_local global i32 0, align 4
@inject_handlers = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zio_inject_list_next(i32* %0, i8* %1, i64 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = call i32 @mutex_enter(i32* @spa_namespace_lock)
  %12 = load i32, i32* @RW_READER, align 4
  %13 = call i32 @rw_enter(i32* @inject_lock, i32 %12)
  %14 = call %struct.TYPE_5__* @list_head(i32* @inject_handlers)
  store %struct.TYPE_5__* %14, %struct.TYPE_5__** %9, align 8
  br label %15

15:                                               ; preds = %27, %4
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %17 = icmp ne %struct.TYPE_5__* %16, null
  br i1 %17, label %18, label %30

18:                                               ; preds = %15
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %5, align 8
  %23 = load i32, i32* %22, align 4
  %24 = icmp sgt i32 %21, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %18
  br label %30

26:                                               ; preds = %18
  br label %27

27:                                               ; preds = %26
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %29 = call %struct.TYPE_5__* @list_next(i32* @inject_handlers, %struct.TYPE_5__* %28)
  store %struct.TYPE_5__* %29, %struct.TYPE_5__** %9, align 8
  br label %15

30:                                               ; preds = %25, %15
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %32 = icmp ne %struct.TYPE_5__* %31, null
  br i1 %32, label %33, label %49

33:                                               ; preds = %30
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 2
  %36 = load i32, i32* %35, align 4
  %37 = load i32*, i32** %8, align 8
  store i32 %36, i32* %37, align 4
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = load i32*, i32** %5, align 8
  store i32 %40, i32* %41, align 4
  %42 = load i8*, i8** %6, align 8
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = call i32 @spa_name(i32 %45)
  %47 = load i64, i64* %7, align 8
  %48 = call i32 @strncpy(i8* %42, i32 %46, i64 %47)
  store i32 0, i32* %10, align 4
  br label %52

49:                                               ; preds = %30
  %50 = load i32, i32* @ENOENT, align 4
  %51 = call i32 @SET_ERROR(i32 %50)
  store i32 %51, i32* %10, align 4
  br label %52

52:                                               ; preds = %49, %33
  %53 = call i32 @rw_exit(i32* @inject_lock)
  %54 = call i32 @mutex_exit(i32* @spa_namespace_lock)
  %55 = load i32, i32* %10, align 4
  ret i32 %55
}

declare dso_local i32 @mutex_enter(i32*) #1

declare dso_local i32 @rw_enter(i32*, i32) #1

declare dso_local %struct.TYPE_5__* @list_head(i32*) #1

declare dso_local %struct.TYPE_5__* @list_next(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @strncpy(i8*, i32, i64) #1

declare dso_local i32 @spa_name(i32) #1

declare dso_local i32 @SET_ERROR(i32) #1

declare dso_local i32 @rw_exit(i32*) #1

declare dso_local i32 @mutex_exit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
